--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
@@ -40,6 +44,8 @@
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.3",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.3.2",
     "webpack": "^5.88.2"
   }
 }
